--- a/app/src/main/res/layout/activity_eve_info.xml
+++ b/app/src/main/res/layout/activity_eve_info.xml
@@ -123,7 +123,7 @@
                         android:layout_marginEnd="@dimen/margin_distance"
                         android:layout_weight="0"
                         android:clickable="false"
-                        android:src="@drawable/lock"
+                        android:src="@drawable/wrench"
                         app:backgroundTint="@color/colorEve"
                         app:elevation="0dp" />
 
@@ -132,7 +132,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="end|center_vertical"
                         android:layout_weight="1"
-                        android:text="@string/eve_info_lock"
+                        android:text="@string/eve_info_wrench"
                         android:textAppearance="@style/font_explanation_additional" />
                 </LinearLayout>
             </android.support.v7.widget.CardView>
@@ -168,7 +168,43 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="end|center_vertical"
                         android:layout_weight="1"
-                        android:text="@string/eve_info_wrench"
+                        android:text="@string/eve_info_wrench2"
+                        android:textAppearance="@style/font_explanation_additional" />
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_marginBottom="@dimen/margin_distance"
+                android:padding="@dimen/margin_distance">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:clickable="false"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:paddingTop="@dimen/margin_distance"
+                    android:paddingBottom="@dimen/margin_distance">
+
+                    <android.support.design.widget.FloatingActionButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/margin_distance"
+                        android:layout_marginEnd="@dimen/margin_distance"
+                        android:layout_weight="0"
+                        android:clickable="false"
+                        android:src="@drawable/lock"
+                        app:backgroundTint="@color/colorEve"
+                        app:elevation="0dp" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="end|center_vertical"
+                        android:layout_weight="1"
+                        android:text="@string/eve_info_lock"
                         android:textAppearance="@style/font_explanation_additional" />
                 </LinearLayout>
             </android.support.v7.widget.CardView>
